# appstore

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
appstore/: auth.py  get_reviews.py  get_versions.py
