[tool.poetry]
name = "appstore"
version = "0.1.0"
description = "Downloading review data via App Store Connect."
authors = ["Hamed Bastan-Hagh <hamed.bastan-hagh@hmrc.gov.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
Authlib = "^1.3.1"
requests = "^2.32.3"
tqdm = "^4.66.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.7"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
